--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./dist",
+    "sourceMap": false,
     "types": []
   },
   "files": [
