--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bugzilla-dishboard",
+  "name": "bugboard",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --aot=true --progress=true --prod=true --serviceWorker=true --sourceMap=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
