--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
     image: nginx:1.16.0
     ports:
       - "80:80"
+      # - "443:443"
     tty: true
     volumes:
       - ./buguette.conf/:/etc/nginx/conf.d/default.conf
       - ./dist/:/buguette/dist/
+      # - ./etc/letsencrypt:/etc/letsencrypt
   buguette-build:
     build: .
     volumes:
