--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,6 +46,18 @@
       "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
       "protocol": "inspector",
       "args": ["${workspaceFolder}/e2e/protractor.conf.js"]
-    }
+    },
+    {
+      "name": "Launch file",
+      "type": "node",
+      "request": "launch",
+      "runtimeArgs": [
+          "-r",
+          "ts-node/register"
+      ],
+      "args": [
+          "${workspaceFolder}/file.ts"
+      ]
+}
   ]
 }
