--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
     "@angular/service-worker": "^10.0.0",
-    "rxjs": "~6.5.4",
-    "rxjs-compat": "^6.5.5",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -31,7 +30,7 @@
     "@angular-devkit/build-angular": "^0.1000.0",
     "@angular/cli": "^10.0.0",
     "@angular/compiler-cli": "^10.0.0",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
     "codelyzer": "^5.1.2",
