add enabled gzip compresion for bust performance

--- a/buguette-https.conf
+++ b/buguette-https.conf
@@ -1,4 +1,5 @@
 server {
+  gzip on;
   listen 80;
   location / {
     return 301 https://$host$request_uri;
@@ -6,6 +7,7 @@ server {
 }
 
 server {
+    gzip on;
     listen 443 ssl;
     server_name example.com;
     root /buguette/dist/;
