add more gzip optimisations and add robots.txt responce

--- a/buguette-https.conf
+++ b/buguette-https.conf
@@ -1,5 +1,11 @@
 server {
   gzip on;
+  gzip_buffers      16 8k;
+  gzip_comp_level   4;
+  gzip_http_version 1.0;
+  gzip_min_length   1280;
+  gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/bmp;
+  gzip_vary         on;
   listen 80;
   location / {
     return 301 https://$host$request_uri;
@@ -7,18 +13,28 @@ server {
 }
 
 server {
-    gzip on;
-    listen 443 ssl;
-    server_name example.com;
-    root /buguette/dist/;
-    index index.html;
+  gzip on;
+  gzip_buffers      16 8k;
+  gzip_comp_level   4;
+  gzip_http_version 1.0;
+  gzip_min_length   1280;
+  gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/bmp;
+  gzip_vary         on;
+  listen 443 ssl;
+  server_name example.com;
+  root /buguette/dist/;
+  index index.html;
 
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  location / {
+      try_files $uri $uri/ /index.html;
+  }
+
+  location /robots.txt {
+    return 200 "User-agent: *\nDisallow: /\n";
+  }
 }
