--- a/buguette.conf
+++ b/buguette.conf
@@ -1,10 +1,20 @@
 server {
   gzip on;
+  gzip_buffers      16 8k;
+  gzip_comp_level   4;
+  gzip_http_version 1.0;
+  gzip_min_length   1280;
+  gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/bmp;
+  gzip_vary         on;
   listen 80;
    root /buguette/dist/;
    index index.html index.htm;
    server_name  buguette;
   location / {
     try_files $uri $uri/ /index.html;
+  }
+
+  location /robots.txt {
+    return 200 "User-agent: *\nDisallow: /\n";
   }
 }
