Change config to be default by https

--- a/buguette-https.conf
+++ b/buguette-https.conf
@@ -21,12 +21,12 @@ server {
   gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/bmp;
   gzip_vary         on;
   listen 443 ssl;
-  server_name example.com;
+  server_name buguette.teamlab.info;
   root /buguette/dist/;
   index index.html;
 
-  ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/buguette.teamlab.info/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/buguette.teamlab.info/privkey.pem;
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
