--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,5 @@ jobs:
       run: |
         npm install -g markdownlint-cli
         markdownlint *.md
+    - name: Build default Dockerfile
+      run: docker build .      
