Actually build product in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,4 +11,6 @@ jobs:
         npm install -g markdownlint-cli
         markdownlint *.md
     - name: Build default Dockerfile
-      run: docker build .      
+      run: |
+        docker build . --name buguette_builder
+        docker run buguette_builder npm run build
