--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    restart: always  
     tty: true
     volumes:
       - ./buguette-https.conf/:/etc/nginx/conf.d/default.conf
