--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.0",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^10.2.0",
-    "@angular/common": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/forms": "^10.1.0",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
     "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/router": "^10.1.0",
-    "@angular/service-worker": "^10.1.0",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
     "rxjs": "^6.6.7",
-    "tslib": "^2.2.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.1.6",
-    "@angular/compiler-cli": "^10.1.0",
-    "@types/jasmine": "^3.7.2",
+    "@angular-devkit/build-angular": "^0.1102.13",
+    "@angular/cli": "^11.2.13",
+    "@angular/compiler-cli": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.0.3",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~7.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.9"
+    "typescript": "^4.1.5"
   }
 }
