--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,24 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: "@angular/cli"
-    versions:
-    - 11.1.3
-    - 11.1.4
-    - 11.2.0
-    - 11.2.1
-    - 11.2.10
-    - 11.2.11
-    - 11.2.2
-    - 11.2.3
-    - 11.2.4
-    - 11.2.5
-    - 11.2.6
-    - 11.2.7
-    - 11.2.8
-    - 11.2.9
-  - dependency-name: "@types/jasmine"
-    versions:
-    - 3.6.8
-    - 3.6.9
+- package-ecosystem: docker
+  directory: "/"
+  schedule:
+    interval: daily
+ 
