--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --aot=true --prod=true --serviceWorker=true --sourceMap=false",
+    "build": "ng build --aot=true --configuration production --serviceWorker=true --sourceMap=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
