--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,4 @@ jobs:
         markdownlint *.md
     - name: Build default Dockerfile
       run: |
-        docker build --tag buguette_builder .
-        docker run buguette_builder npm run build
+        docker build .
