Add lets enrcrypo well known locations

--- a/buguette-https.conf
+++ b/buguette-https.conf
@@ -10,6 +10,9 @@ server {
   location / {
     return 301 https://$host$request_uri;
   }
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 }
 
 server {
