--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
     volumes:
       - ./buguette-https.conf/:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt/:/etc/letsencrypt
+      - ./.certbot:/var/www/certbot
