--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 20
+  allow:
+    - dependency-type: "all"
 - package-ecosystem: docker
   directory: "/"
   schedule:
