--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,12 @@ updates:
   directory: "/"
   schedule:
     interval: daily
+    time: "08:00"
+    timezone: "Europe/Moscow"
   open-pull-requests-limit: 20
 - package-ecosystem: docker
   directory: "/"
   schedule:
     interval: daily
+    time: "08:00"
+    timezone: "Europe/Moscow"
