Add linter stage

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -25,3 +25,15 @@ jobs:
         run: |
           npm install -g markdownlint-cli
           markdownlint *.md
+  ng_lint:
+    name: Angular Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '16'
+      - name: Angular Lint
+        run: |
+          npm install
+          ng lint
